--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "axios": "^1.7.9",
     "crawlee": "^3.12.1",
     "dayjs": "^1.11.13",
-    "playwright": "^1.49.1"
+    "playwright": "^1.49.1",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@apify/tsconfig": "^0.1.0",
