--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ mtku-images
 src/scripts/juejin/frontend
 src/scripts/weibo/weibo-hot/2025-01-11
 src/scripts/qidian/yuepiao
+src/scripts/zongheng/yuepiao
