--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   "description": "crawlee-demo",
   "dependencies": {
     "axios": "^1.7.9",
+    "chalk": "^5.4.1",
     "crawlee": "^3.0.0",
+    "csv-writer": "^1.6.0",
     "dayjs": "^1.11.10",
+    "moment": "^2.30.1",
     "nodemailer": "^6.9.16",
     "playwright": "^1.40.0",
     "winston": "^3.17.0"
